# galaga

./: Bullet.cpp  Bullet.h  CFG.cpp  CFG.h  CMakeLists.txt  Core.cpp  Core.h  Elements.cpp  Elements.h  Formations.cpp  Formations.h  Game.cpp  Game.h  LevelsElement.cpp  LevelsElement.h  Music.cpp  Music.h  Objects.cpp  Objects.h  Patterns.cpp  Patterns.h  README.md  Resources.cpp  Resources.h  Rocket.cpp  Rocket.h  Ship.cpp  Ship.h  StageM.cpp  StageM.h  Text.cpp  Text.h  header.h  main.cpp  physix.cpp  physix.h  shapes.cpp  shapes.h  stages.cpp  stages.h  (+6 more)
resources/images/: exp.psd  exp2.psd  rocket.psd
